      help pycentral transition to the new python policy (thanks
      to doko)
  * ensure pidgin-libnotify is ugpraded (LP: #332328)
  * better wording for aborts (thanks to Gabor Kelemen and
    Jean-Baptiste Lallement), LP: #289303
  * wording fixes, thanks to Brian Murray and Gabor Kelemen 
    LP: #269583
  * i18n fix, thanks to Gabor Kelemen, LP: #331821

  [ Brian Murray ]
  * DistUpgrade/multiple files:
    - fixed typographical error

 -- Brian Murray <brian@ubuntu.com>  Thu, 19 Feb 2009 09:14:26 -0800

update-manager (1:0.98.1) jaunty; urgency=low

  * reenable the demotions.cfg generation and mirror updates
  * setup.py cleanup (thanks to liw)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 19 Feb 2009 00:22:58 +0100

update-manager (1:0.98) jaunty; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeController.py:
    - fixes in the error string (thanks to Jean-Baptiste 
      Lallement, LP: #298296)
  * support getting NEWS.Debian information in addition
    to the changelog
  * debian/update-manager-core.links:
    - fix typo (thanks to tjaalton)
  * merge the 'computer-janitor' core and quirks code into
    update-manager-core (part of the jaunty-cruftremover-improvements
    spec)
  * conflicts with the current version of computer-janitor

  [ Brian Murray ]
  * DistUpgrade - Release Announcements:
    - Modified reporting bugs sections to recommend using ubuntu-bug instead
      of filing bugs directly in Launchpad. (LP: #327800)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 18 Feb 2009 23:44:17 +0100

update-manager (1:0.97.1) jaunty; urgency=low

  [ Michael Vogt ]
  * UpdateManager/UpdateManager.py:
    - make the gconf handling more robust (LP: #320586)
  * UpdateManager/Core/MyCache.py:
    - fix crash when no changelog can be found (LP: #320894)
  * UpdateManager/Core/MetaRelease.py:
    - do not crash on disk full (LP: #321872)
  * DistUpgrade/DistUpgradeController.py: