@@ -1,5 +1,6 @@
 var/lib/update-manager
 var/log/dist-upgrade
 etc/update-motd.d
+etc/update-manager/release-upgrades.d
 usr/bin
 usr/share/computerjanitor/plugins
