@@ -13,12 +13,16 @@ update-manager (1:0.98.2) jaunty; urgency=low
   * wording fixes, thanks to Brian Murray and Gabor Kelemen 
     LP: #269583
   * i18n fix, thanks to Gabor Kelemen, LP: #331821
+  * support /etc/update-manager/release-upgrades.d/ directory
+    for local overrides of the upgrade process. Useful to force
+    certain site-specific options (like third party repository
+    handling)
 
   [ Brian Murray ]
   * DistUpgrade/multiple files:
     - fixed typographical error
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 19 Feb 2009 09:14:26 -0800
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 23 Feb 2009 17:55:51 +0100
 
 update-manager (1:0.98.1) jaunty; urgency=low
 
